update star style for mobile alignment correction.

--- a/src/components/Widgets/StarRating/StarRating.scss
+++ b/src/components/Widgets/StarRating/StarRating.scss
@@ -20,27 +20,27 @@ $empty-star-color: lighten(grey, 35%);
 }
 
 // stars will fill based on state
-.ratingBox.rate-5-star > span {
+.ratingBox > span {
   @include starStyle();
 }
-.ratingBox.rate-4-star > span:nth-child(1) ~ span {
-    @include starStyle();
+.ratingBox.rate-4-star > span:nth-child(4) ~ span {
+    @include emptyStarStyle();
 }
-.ratingBox.rate-3-star > span:nth-child(2) ~ span {
-  @include starStyle();
+.ratingBox.rate-3-star > span:nth-child(3) ~ span {
+  @include emptyStarStyle();
 }
-.ratingBox.rate-2-star > span:nth-child(3) ~ span {
+.ratingBox.rate-2-star > span:nth-child(2) ~ span {
   color: transparent;
-  @include starStyle();
+  @include emptyStarStyle();
 }
-.ratingBox.rate-1-star > span:nth-child(4) ~ span {
-  @include starStyle();
+.ratingBox.rate-1-star > span:nth-child(1) ~ span {
+  @include emptyStarStyle();
 }
 
 // hovering changes underlying unicode and changes subsequent spans; hovering overrides aforementioned styles
 .ratingBox {
   width: min-content;
-  unicode-bidi: bidi-override;
-  direction: rtl;
+  // unicode-bidi: bidi-override;
+  // direction: rtl;
   color: $empty-star-color;
 }
